--- a/index.html
+++ b/index.html
@@ -1,28 +1,39 @@
 <!DOCTYPE html>
-<html lang="en">
 <head>
-    <meta charset="UTF-8">
+    <title>Bach's Essay</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-
-    <link href="./highlighter/texthighlighter.css" rel="stylesheet">
-    <script src="./highlighter/texthighlighter.js"></script>
+    <link rel="stylesheet" href="style.css">
+    <script src="https://cdn.tailwindcss.com"></script>
 </head>
-<body style="margin: 0; height: 100vh; display: flex; align-items: center; justify-content: center;">
-    <!-- Load TensorFlow.js. This is required to use the qna model. -->
-    <script src="https://cdn.jsdelivr.net/npm/@tensorflow/tfjs"> </script>
-    <!-- Load the qna model. -->
-    <script src="https://cdn.jsdelivr.net/npm/@tensorflow-models/qna"> </script>
-    
-
-    <div>
-        <div>
-            <input type="text" id="question" placeholder="Enter Your Question!">
-            <button id="submit" onclick="answers()">Submit</button>            
-        </div>
-        <textarea id="passage" style="resize: none; width: calc(100vw - 20px); height: calc(100vh - 50px);"></textarea> 
-    </div>
+<body style="overflow-x: hidden; overflow-y: hidden;" class="h-screen w-screen flex">
     <script src="main.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/@webcomponents/webcomponentsjs@2/webcomponents-loader.min.js"></script>
+    <script type="module" src="https://cdn.jsdelivr.net/gh/zerodevx/zero-md@1/src/zero-md.min.js"></script>
 
+    <div class="md:w-1/2 justify-center text-center grid w-0 place-items-center">
+      <img src="./backgrounds/background3.jpg" alt="bg" class="h-full w-full object-cover">
+    </div>
+
+    <div style="overflow-y: scroll;" class="md:w-1/2 w-full space-y-4 py-8 p-16">
+      <zero-md>
+        <template>
+            <link
+              rel="stylesheet"
+              href="https://cdn.jsdelivr.net/gh/sindresorhus/github-markdown-css@4/github-markdown.min.css"
+            />
+            <link
+              rel="stylesheet"
+              href="https://cdn.jsdelivr.net/gh/PrismJS/prism@1/themes/prism.min.css"
+            />
+        </template>
+        <script type="text/markdown">
+          # <p align="center">Bach's Essay</p>
+
+          ### <a href="pages/12-09-23.html" style="text-decoration: none;"><p style="color: black;">Teens' stress - 12/09/2023</p></a>
+
+        </script>
+    </zero-md>
+    </div>
+    
 </body>
 </html>
