--- a/index.html
+++ b/index.html
@@ -1,39 +1,44 @@
 <!DOCTYPE html>
+<html lang="en">
 <head>
-    <title>Bach's Essay</title>
+    <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="style.css">
+    <title>Document</title>
+
+    <link href="./highlighter/texthighlighter.css" rel="stylesheet">
+    <script src="./highlighter/texthighlighter.js"></script>
     <script src="https://cdn.tailwindcss.com"></script>
 </head>
-<body style="overflow-x: hidden; overflow-y: hidden;" class="h-screen w-screen flex">
-    <script src="main.js"></script>
-    <script src="https://cdn.jsdelivr.net/npm/@webcomponents/webcomponentsjs@2/webcomponents-loader.min.js"></script>
-    <script type="module" src="https://cdn.jsdelivr.net/gh/zerodevx/zero-md@1/src/zero-md.min.js"></script>
-
-    <div class="md:w-1/2 justify-center text-center grid w-0 place-items-center">
-      <img src="./backgrounds/background3.jpg" alt="bg" class="h-full w-full object-cover">
-    </div>
-
-    <div style="overflow-y: scroll;" class="md:w-1/2 w-full space-y-4 py-8 p-16">
-      <zero-md>
-        <template>
-            <link
-              rel="stylesheet"
-              href="https://cdn.jsdelivr.net/gh/sindresorhus/github-markdown-css@4/github-markdown.min.css"
-            />
-            <link
-              rel="stylesheet"
-              href="https://cdn.jsdelivr.net/gh/PrismJS/prism@1/themes/prism.min.css"
-            />
-        </template>
-        <script type="text/markdown">
-          # <p align="center">Bach's Essay</p>
-
-          ### <a href="pages/12-09-23.html" style="text-decoration: none;"><p style="color: black;">Teens' stress - 12/09/2023</p></a>
-
-        </script>
-    </zero-md>
-    </div>
+<body style="overflow-x: hidden; overflow-y: hidden;" class="h-screen w-screen flex m-0">
+    <!-- Load TensorFlow.js. This is required to use the qna model. -->
+    <script src="https://cdn.jsdelivr.net/npm/@tensorflow/tfjs"> </script>
+    <!-- Load the qna model. -->
+    <script src="https://cdn.jsdelivr.net/npm/@tensorflow-models/qna"> </script>
     
+
+    <div class="h-screen w-screen flex ">
+        <div class="md:w-1/3 m-2">
+            <input class="w-full border-4 p-2 rounded" type="text" id="question" placeholder="Enter Your Question!">
+            <button class="w-full mt-3 bg-cyan-500 rounded text-white" id="submit" onclick="answers()">Submit</button>       
+            <div id="answers" class="w-full mt-3 p-2 bg-zinc-50 rounded h-fit">
+                <p>Answers for you:</p>
+                <p id="1">1. </p>
+                <p id="2">2. </p>
+                <p id="3">3. </p>
+                <p id="4">4. </p>
+                <p id="5">5. </p>
+            </div>
+            <div id="loading" class="w-full mt-3 bg-zinc-50 rounded h-fit">
+                <div class="flex justify-center">
+                    <p>Loading, please wait</p>
+                </div>                
+            </div>
+        </div>
+        <div class="md:w-2/3 m-2">
+            <textarea id="passage" placeholder="Put Your Passage Here!" style="height: calc(100vh - 8px); resize: none;" class="w-full border-4 p-2 rounded"></textarea>
+        </div>
+    </div>
+    <script src="main.js"></script>
+
 </body>
 </html>
