--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
     <div class="h-screen w-screen flex ">
         <div class="md:w-1/3 m-2">
             <input class="w-full border-4 p-2 rounded" type="text" id="question" placeholder="Enter Your Question!">
-            <button class="w-full mt-3 bg-cyan-500 rounded text-white" id="submit" onclick="answers()">Submit</button>       
+            <button class="w-full mt-3 bg-cyan-500 rounded text-white" id="submit" onclick="answers()">Get answers!</button>       
             <div id="answers" class="w-full mt-3 p-2 bg-zinc-50 rounded h-fit">
                 <p>Answers for you:</p>
                 <p id="1">1. </p>
