--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>YouBot</title>
 
     <link href="./highlighter/texthighlighter.css" rel="stylesheet">
     <script src="./highlighter/texthighlighter.js"></script>
